bin/tests/errors/lexer/lex_err_consecutive_num_sep.swg
#global fileprivate

0b__ // swc-expected-error {{lex_err_consecutive_num_sep}}
